--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ body {
     width: 40px;
     height: 40px;
     text-align: center;
-
+    cursor: pointer;
 }
 
 
@@ -32,7 +32,7 @@ body {
     height: 70px;
     width: 70px;
     background-color: gold;
-    margin-top: 15px;
+    margin-top: 5px;
     font-size: 35px;
     border-bottom-left-radius: 50%;
     border-bottom-right-radius: 50%;
@@ -45,8 +45,8 @@ body {
     position: static;
     background-color: rgb(233, 233, 0);
     margin: auto;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    
+    margin-bottom: 5px;
     padding: 15px;
     border-radius: 35%;
     font-family: Arial, Helvetica, sans-serif;
