--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,31 @@
 body {
+    background-image: url(../img/Capture.JPG);
+    
     background-color: lightcoral;
     text-align: center;
+    
+    background-repeat: no-repeat;
+}
+h1{
+  font-size: 50px;
+  opacity: 1;
+  position: absolute;
+  top: 0;
+  right: auto;
+  color: antiquewhite;
+  transition : all 0.7s ease-out;
+  background-clip: text;
+  
+  
+}
+.hint{
+    
+    display: all;
+    cursor: pointer;
+    display: inline-block;
+    text-align: center;
+    background-color:transparent;
+    border:0;
 }
 
 .board {
@@ -16,6 +41,7 @@ body {
     height: 40px;
     text-align: center;
     cursor: pointer;
+    color: grey;
 }
 
 
@@ -57,6 +83,7 @@ body {
 }
 
 .timer {
+    display: inline-block;
     border-top-left-radius: 50%;
     border-top-right-radius: 50%;
     padding:  15px;
@@ -72,7 +99,9 @@ body {
     border-style: groove;
 
 }
-
+.cell.hint{
+    background-color: magenta;
+}
 .cell.clicked {
     background-color: lightgreen;
 }
