--- a/css/main.css
+++ b/css/main.css
@@ -20,24 +20,39 @@ h1{
   
   
 }
+.timer {
+    display: inline-block;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+    padding:  15px;
+    height: 70px;
+    width: 70px;
+    background-color:  rgb(233, 233, 0);
+    position: static;
+    left: 10px;
+    top: 20px;
+    font-style: oblique;
+    font-size: 30px;
+    border-style: groove;
+
+}
 .flag{
     
     padding: 15px;
-    border-radius: 35%;
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
     font-size: 20px;
     border-style: groove;
     background-color: rgb(233, 233, 0);
-    
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
     height: 50px;
     width: 50px;
-    margin-right: 230px;
-    margin-top: 170px;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-
+    margin-bottom: 1px;
+    
+    /* top: 0px;
+    right: 0px; */
+    display: inline-block;
 }
 .hint1{
     
@@ -118,38 +133,23 @@ h1{
 
 .lifes {
     height: 50px;
-    width: 210px;
+    width: 160px;
     position: static;
     background-color: rgb(233, 233, 0);
     margin: auto;
     
     margin-bottom: 5px;
     padding: 15px;
-    border-radius: 35%;
+    border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
-    font-size: 30px;
+    font-size: 23px;
     border-style: groove;
     
 }
 
-.timer {
-    display: inline-block;
-    border-top-left-radius: 50%;
-    border-top-right-radius: 50%;
-    padding:  15px;
-    height: 70px;
-    width: 70px;
-    background-color:  rgb(233, 233, 0);
-    position: static;
-    left: 10px;
-    top: 20px;
-    margin: auto;
-    font-style: oblique;
-    font-size: 30px;
-    border-style: groove;
 
-}
 .cell.hint{
     background-color: magenta;
 }
